# torch-tensor-marathon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
examples/: example_usage.py
src/torch_tensor_marathon/: __init__.py  checker.py  cli.py  config.py  gemini_client.py  i18n.py  main.py  problem.py
src/torch_tensor_marathon/problems/: __init__.py  advanced_ops.py  broadcasting.py  dl_applications.py  einsum.py  gather_scatter.py  indexing_slicing.py  reshape_permute.py  stacking_splitting.py
tests/: debug_indexing.py  test_multi_case.py  verify_problems.py
web/: README.md  app.py
web/static/: app.js  i18n.js  index.html  style.css
